remove overflow that's hidden to fix fluidbox

--- a/wpsc-components/theme-engine-v2/theming/assets/css/common.css
+++ b/wpsc-components/theme-engine-v2/theming/assets/css/common.css
@@ -4746,7 +4746,6 @@ br.clear {
 }
 
 .wpsc-controller .wpsc-product {
-	overflow: hidden;
 	margin-bottom: 3.5em;
 }
 
